# semantic-catalogue

./: .gitignore  Containerfile  Containerfile.dagster  Containerfile.fastapi  Dockerfile  README.md  compose.yml  dagster.yaml  pyproject.toml
bm25/: bm25_values.json
config/: config.toml
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.js  index.js  theme.js
frontend/src/components/: CombinedResults.js  DocumentItem.js  ExplanationBox.js  ResultsGrid.js  ResultsGrid_tmp.js  SearchBar.js  SourceCard.js
reports/: DOCS.html  DOCS.md  DOCS.qmd  notes.md
src/: __init__.py  jobs.py  sensors.py
src/assets/: adr.py  datastore.py
src/common/: logging.py  settings.py  utils.py
src/datastore/: __init__.py  jobs.py  loaders.py  schedules.py
src/datastore/assets/: adr.py  cdrc.py  datastore.py  ukds.py
src/datastore/assets/test_assets/: adr.py
src/model/: answer.py  citations.py  dag.py  grader.py  hallucination.py  model.py  moderation.py  rag.py
src/search_api/: api.py
