[project]
name = "semantic-catalogue"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "cjber", email = "cjberragan@gmail.com" }
]
dependencies = [
    "dagster-openai>=0.23.9",
    "dagster-postgres>=0.23.15",
    "dagster-webserver>=1.7.8",
    "dagster>=1.7.8",
    "dateparser>=1.2.0",
    "fastapi[standard]>=0.112.0",
    "langchain-community>=0.2.10",
    "langchain-experimental>=0.0.63",
    "langchain-openai>=0.1.20",
    "langchain-pinecone>=0.1.3",
    "langchain>=0.2.12",
    "langchainhub>=0.1.20",
    "langgraph>=0.1.19",
    "lxml>=5.2.2",
    "pdfminer-six>=20240706",
    "pinecone-text>=0.9.0",
    "polars>=0.20.25",
    "pydantic-settings>=2.3.4",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sickle>=0.7.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipdb>=0.13.13",
    "ipython>=8.24.0",
    "pygraphviz>=1.13",
    "sourcery-cli>=1.18.0",
    "jupyter>=1.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/semantic_catalogue"]

[tool.dagster]
module_name = "src.datastore"
